--- a/web-developer.html
+++ b/web-developer.html
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Oxford Oxford Oxford</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/petroplan-looking-for-full-stack-php-web-developer/'>PETROPLAN looking for Full-Stack, PHP Web Developer</a></h5> 
+<h5><a href='https://dedeleads.com/job/petroplan-looking-for-full-stack-php-web-developer/'>PETROPLAN looking for Full-Stack, PHP Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pcmcanada.applytojob.com/apply/0cWVfq5D61/Web-Developer-Contractor'>Web Developer (Contractor) - PCM Canada - Career Page</a></h5> 
+<h5><a href='http://pcmcanada.applytojob.com/apply/0cWVfq5D61/Web-Developer-Contractor'>Web Developer (Contractor) - PCM Canada - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada Canada  Canada  Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -154,7 +154,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -174,11 +174,11 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/web-application-developer-ts-sci-with-polygraph-bf6nraCM4r6BkYaICoXfFy'>Web Application Developer - TS/SCI with Polygraph #0442 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/web-application-developer-ts-sci-with-polygraph-bf6nraCM4r6BkYaICoXfFy'>Web Application Developer - TS/SCI with Polygraph #0442 job at Stratus Solutions in Fulton, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -253,7 +253,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -309,7 +309,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.theguardian.com/job/6977675/trainee-web-developer/?LinkSource=SEOLandingPageListing'>Trainee Web Developer job with TALENT SPA | Guardian Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.theguardian.com/job/6977675/trainee-web-developer/?LinkSource=SEOLandingPageListing'>Trainee Web Developer job with TALENT SPA | Guardian Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -327,7 +327,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Lisbon, Portugal  Lisbon</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.s1jobs.com/job/education-teaching/educational-research-education-teaching/glasgow/747625923.html'>FOCUS Point Web Resource Development Officer (Part-Time, 0.8 FTE) (256374) | Education / Teaching Jobs | s1jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.s1jobs.com/job/education-teaching/educational-research-education-teaching/glasgow/747625923.html'>FOCUS Point Web Resource Development Officer (Part-Time, 0.8 FTE) (256374) | Education / Teaching Jobs | s1jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -335,7 +335,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -385,11 +385,11 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apiax.join.com/jobs/458971-front-end-web-developer'>Job @ Apiax (Lisbon): Front-End Web Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://intrepidsolutions.applytojob.com/apply/ORjGF7RyY4/Web-Developer'>Web Developer - Intrepid Solutions and Services, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intrepidsolutions.applytojob.com/apply/ORjGF7RyY4/Web-Developer'>Web Developer - Intrepid Solutions and Services, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -437,7 +437,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=oB919fwE&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=ny7glMwx'>Compuware Careers - Senior Front-End Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=oB919fwE&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=ny7glMwx'>Compuware Careers - Senior Front-End Web Developer</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -449,7 +449,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/innovecs/jobs/4496097002'>Job Application for Middle Web Developer at Innovecs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/innovecs/jobs/4496097002'>Job Application for Middle Web Developer at Innovecs</a></h5> 
 <p><span class="badge badge-light">Kyiv</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
